fix: increase spacing between templates

--- a/assets/src/css/admin/forms.scss
+++ b/assets/src/css/admin/forms.scss
@@ -404,7 +404,7 @@ Shortcode Copy & Paste
 	#form_template_options {
 		.templates-list {
 			display: grid;
-			grid-gap: 10px;
+			grid-gap: 36px;
 			grid-template-columns: 1fr 1fr;
 			padding: 8px 0 24px 0;
 
